--- a/public/index3.html
+++ b/public/index3.html
@@ -6,7 +6,12 @@
   </head>
   <body>
     <div id="container">
+      <h1 class="new-york__title">
+        We've all written code<br/> 
+        we're not proud of...
+      </h1>
       <div class="new-york__subtitle">
+        <hr>
         <pre>
           var queue = ...        // A job queue out in space
 
@@ -42,6 +47,14 @@
             }
           });
         </pre>
+        <hr>
+        <div class="grid-wrapper">
+          <div class="grid">
+            <div class="grid__cell unit-1-2">
+              <p><a class="btn btn--big" href="index4.html">But there is another way.</a></p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
