--- a/public/index3.html
+++ b/public/index3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Callback Hell</title>
+    <title>ThoughtWorksNYC | Home Office Day</title>
     <link rel="stylesheet" href="//showcase.thoughtworks.com/css/candy.css">
   </head>
   <body>
