--- a/public/index3.html
+++ b/public/index3.html
@@ -6,12 +6,31 @@
   </head>
   <body>
     <div id="container">
-      <h1 class="new-york__title">
-        We've all written code<br/> 
-        we're not proud of...
-      </h1>
+      <div class="grid-wrapper">
+        <div class="grid">
+          <div class="grid__cell">
+            <br/>
+            <p>NYC::HOD -- Angular JS Dark Magic</p>
+          </div>
+        </div>
+      </div>
+      <div class="grid-wrapper insights-article insights-article--blue">
+        <div class="grid">
+          <div class="grid__cell">
+            <p class="insights-article__date">March 21, 2014</p>
+            <h2 class="insights-article__title">
+              We've all written code<br/> 
+              we're not proud of...
+            </h2>
+            <p class="insights-article__author">
+              <ul id="promise"></ul>
+            </p>
+            <p class="insights-article__categories">
+            </p>
+          </div>
+        </div>
+      </div>
       <div class="new-york__subtitle">
-        <hr>
         <pre>
           var queue = ...        // A job queue out in space
 
@@ -47,13 +66,14 @@
             }
           });
         </pre>
-        <hr>
-        <div class="grid-wrapper">
-          <div class="grid">
-            <div class="grid__cell unit-1-2">
-              <p><a class="btn btn--big" href="index4.html">But there is another way.</a></p>
-            </div>
-          </div>
+    </div>
+    <div class="grid-wrapper insights-article insights-article--blue">
+      <div class="grid">
+        <div class="grid__cell">
+          <p class="insights-article__categories">
+            <br/>
+            <a href="/index4.html" class="insights-article__category">But there is another way.</a>
+          </p>
         </div>
       </div>
     </div>
