--- a/public/index3.html
+++ b/public/index3.html
@@ -22,10 +22,8 @@
               We've all written code<br/> 
               we're not proud of...
             </h2>
-            <p class="insights-article__author">
-              <ul id="promise"></ul>
-            </p>
             <p class="insights-article__categories">
+              <a href="http://www.arable.me/">For those interested...</a>
             </p>
           </div>
         </div>
