--- a/public/index4.html
+++ b/public/index4.html
@@ -13,5 +13,48 @@
         </div>
       </div>
     </div>
+    <div class="grid-wrapper">
+        <div class="grid grid--center">
+          <div class="grid__cell grid--center">
+            <p class="insights-article__categories">
+              <br>
+              Promises are a <a href="http://en.wikipedia.org/wiki/Software_pattern">Software Design Pattern.</a>
+            </p>
+          </div>
+        </div>
+      </div>
+    <div class="grid-wrapper grid-wrapper--separator">
+      <div class="grid grid--center">
+        <div class="grid__cell unit-2-3--lap">
+          <p>
+            A promise represents the result of a operation. This operation may be long lived, and is not guaranteed to be completed.
+          </p>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="grid-wrapper grid-wrapper--separator">
+      <div class="grid grid--center">
+        <div class="grid__cell unit-2-3--lap">
+          <p>
+            Rather than synchronously blocking for the long lived operation, the called function returns an object representing the promised result.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="grid-wrapper grid-wrapper--separator">
+      <div class="grid grid--center">
+        <div class="grid__cell unit-2-3--lap">
+          <p>
+            Consider the example of a third party API call across HTTP. Latency is unpredictable - HTTP is many orders of magnitude slower than cache.
+
+            When using promises, the application is free to do other units of work until the promised value is needed.
+          </p>
+        </div>
+      </div>
+    </div>
+
   </body>
 </html>
