--- a/public/index4.html
+++ b/public/index4.html
@@ -56,5 +56,16 @@
       </div>
     </div>
 
+    <div class="grid-wrapper grid-wrapper--separator">
+      <div class="grid grid--center">
+        <div class="grid__cell">
+          <pre>
+            var results = data_service.do_work(data).then(filterResults);
+            emailResults(results);
+          </pre>
+        </div>
+      </div>
+    </div>
+
   </body>
 </html>
