--- a/public/index4.html
+++ b/public/index4.html
@@ -27,7 +27,8 @@
       <div class="grid grid--center">
         <div class="grid__cell unit-2-3--lap">
           <p>
-            A promise represents the result of a operation. This operation may be long lived, and is not guaranteed to be completed.
+            A promise represents the result of an operation.<br/> 
+            This operation may be long lived, and is not guaranteed to be completed.
           </p>
         </div>
       </div>
@@ -63,6 +64,19 @@
             var results = data_service.do_work(data).then(filterResults);
             emailResults(results);
           </pre>
+        </div>
+      </div>
+    </div>
+
+    <div class="grid-wrapper insights-article insights-article--blue">
+      <div class="grid">
+        <div class="grid__cell">
+          <br>
+          <h2 class="insights-article">
+              Instead of calling a function ( callback ) <br/> 
+              We are able to return a value ( promise ) <br/>
+          </h2>
+          <a href="/index5.html" class="insights-article__category">Hmm...tell me more about that last bit</a>
         </div>
       </div>
     </div>
