--- a/public/index3.html
+++ b/public/index3.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>ThoughtWorksNYC | Home Office Day</title>
-    <link rel="stylesheet" href="//showcase.thoughtworks.com/css/candy.css">
+    <link rel="stylesheet" href="candy.css">
   </head>
   <body>
     <div id="container">
