--- a/public/index5.html
+++ b/public/index5.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>ThoughtWorksNYC | Home Office Day</title>
-    <link rel="stylesheet" href="//showcase.thoughtworks.com/css/candy.css">
+    <link rel="stylesheet" href="candy.css">
   </head>
   <body>
     <div id="container">
@@ -50,25 +50,27 @@
       <div class="grid__cell unit-2-2--lap">
         <div class="side-quote">
           <p class="side-quote__quote">
-            This function should return a new promise that is fulfilled when the given fulfilledHandler or errorHandler callback is finished. This allows promise operations to be chained together. 
+            This function should return a new promise that is fulfilled when the given fulfilledHandler or errorHandler callback is finished. <br/>
+            <strong>This allows promise operations to be chained together. </strong>
           </p>
         </div>
       </div>
-<br><br><br><br><br><br><br><br><br><br><br><br>
       <div class="grid__cell unit-2-2--lap">
         <div class="side-quote">
           <p class="side-quote__quote">
-            This allows promise operations to be chained together. 
+            A promise can only succeed or fail once. <br/>
+            It cannot succeed or fail twice. <br/>
+            It cannot switch from success to failure or vice versa.
           </p>
         </div>
       </div>
-<br><br><br><br><br><br><br><br><br><br><br><br>
-      <div class="grid__cell">
-        <div class="new-york">
-          <h1 class="new-york__title">operations to be chained together</h1>
+      <div class="grid__cell unit-2-2--lap">
+        <div class="side-quote">
+          <p class="side-quote__quote">
+            If a promise has succeeded or failed and you later add a success/failure callback, the correct callback will be called, even though the event took place earlier.
+          </p>
         </div>
       </div>
-
     </div>
   </body>
 </html>
