--- a/public/index2.html
+++ b/public/index2.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>ThoughtWorksNYC | Home Office Day</title>
-    <link rel="stylesheet" href="//showcase.thoughtworks.com/css/candy.css">
+    <link rel="stylesheet" href="candy.css">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
     <script type="text/javascript" charset="utf-8">
       $(function() {
