--- a/public/index4.html
+++ b/public/index4.html
@@ -49,9 +49,12 @@
       <div class="grid grid--center">
         <div class="grid__cell unit-2-3--lap">
           <p>
-            Consider the example of a third party API call across HTTP. Latency is unpredictable - HTTP is many orders of magnitude slower than cache.
+            Consider the example of a third party API call across HTTP. Latency is unpredictable - HTTP is many orders of magnitude slower than cache. <br/><br/>
 
             When using promises, the application is free to do other units of work until the promised value is needed.
+            <br/><br/>
+
+            (Asynchronous Programming 101)
           </p>
         </div>
       </div>
@@ -80,6 +83,8 @@
         </div>
       </div>
     </div>
+
+    
 
   </body>
 </html>
